--- a/src/main/resources/darts-statistics.properties
+++ b/src/main/resources/darts-statistics.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3306/dartsstats
-db.username=root
-db.password=
+db.url=jdbc:mysql://localhost:3306/dartsstat
+db.username=dartsstat
+db.password=dartsstat
