--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jyaml</groupId>
+			<artifactId>jyaml</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
@@ -55,6 +63,12 @@
 			<artifactId>activeobjects</artifactId>
 			<version>0.8.2</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.javalite</groupId>
+			<artifactId>activejdbc</artifactId>
+			<version>1.4.5</version>
 		</dependency>
 
 		<dependency>
