--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>DartsStatistics</name>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>c5-public-repository</id>
+			<url>http://mvn.carbonfive.com/public</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -98,6 +105,33 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>com.carbonfive.db-support</groupId>
+				<artifactId>db-migration-maven-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.0.4</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/dartsstat</url>
+					<username>dartsstat</username>
+					<password>dartsstat</password>
+					<driver>com.mysql.jdbc.Driver</driver>
+				</configuration>
+				<executions>
+					<execution>
+						<id>dev_migrations</id>
+						<goals>
+							<goal>migrate</goal>
+						</goals>
+						<phase>validate</phase>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -137,6 +171,12 @@
 			<artifactId>activeobjects</artifactId>
 			<version>0.8.2</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.javalite</groupId>
+			<artifactId>activejdbc</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 
 		<dependency>
