--- a/src/main/resources/darts-statistics.properties
+++ b/src/main/resources/darts-statistics.properties
@@ -1,4 +1,6 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/dartsstat
+db.url=jdbc:mysql://${db.host}:3306/${db.name}
+db.host=localhost
+db.name=dartsstat
 db.username=dartsstat
 db.password=dartsstat
