--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src/main/bin"/>
 	<classpathentry kind="src" path="src/main/db"/>
 	<classpathentry kind="src" path="src/main/assembly"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
